--- a/SperingTask/Views/Shared/_Layout.cshtml
+++ b/SperingTask/Views/Shared/_Layout.cshtml
@@ -2,107 +2,122 @@
 <html>
 
 <head>
-    <!-- Basic -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+	<!-- Basic -->
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<!-- Mobile Metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<!-- Site Metas -->
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<meta name="author" content="" />
 
-    <title>Spering</title>
+	<title>Spering</title>
 
-    <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="~/Assets/css/bootstrap.css" />
+	<!-- bootstrap core css -->
+	<link rel="stylesheet" type="text/css" href="~/Assets/css/bootstrap.css" />
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="~/Assets/css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
-    <link href="~/Assets/css/responsive.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="~/Assets/css/style.css" rel="stylesheet" />
+	<!-- responsive style -->
+	<link href="~/Assets/css/responsive.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div class="hero_area">
-        <!-- header section strats -->
-        <header class="header_section">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="~/Assets/images/logo.png" alt="" />
-                        <span>
-                            Spering
-                        </span>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+	<div class="hero_area">
+		<!-- header section strats -->
+		<header class="header_section">
+			<div class="container-fluid">
+				<nav class="navbar navbar-expand-lg custom_nav-container">
+					<a class="navbar-brand" href="index.html">
+						<img src="~/Assets/images/logo.png" alt="" />
+						<span>
+							Spering
+						</span>
+					</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html"> About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="work.html">Work </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="category.html"> Category </a>
-                            </li>
-                        </ul>
-                        <div class="user_option">
-                            <a href="">
-                                <span>
-                                    Login
-                                </span>
-                            </a>
-                            <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                            </form>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="custom_menu-btn ">
-                            <button>
-                                <span class=" s-1">
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav  ">
+							<li class="nav-item active">
+								<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="about.html"> About</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="work.html">Work </a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="category.html"> Category </a>
+							</li>
+						</ul>
+						<div class="user_option">
+							@if (User.Identity.IsAuthenticated)
+							{
+								<a class="dropdown-item">
+									@User.Identity.Name
+								</a>
+								<a asp-action="Logout" asp-controller="Account">
+									Logout
+								</a>
+							}
+							else
+							{
+								<a asp-action="Login" asp-controller="Account">
+									Login
+								</a>
+								<p></p>
+								<a asp-action="Register" asp-controller="Account">
+									Register
+								</a>
+							}
 
-                                </span>
-                                <span class="s-2">
+							<form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+								<button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+							</form>
+						</div>
+					</div>
+					<div>
+						<div class="custom_menu-btn ">
+							<button>
+								<span class=" s-1">
 
-                                </span>
-                                <span class="s-3">
+								</span>
+								<span class="s-2">
 
-                                </span>
-                            </button>
-                        </div>
-                    </div>
+								</span>
+								<span class="s-3">
 
-                </nav>
-            </div>
-        </header>
-        <!-- end header section -->
-            @RenderBody()
-        <!-- footer section -->
-        <footer class="container-fluid footer_section ">
-            <div class="container">
-                <p>
-                    &copy; <span id="displayDate"></span> All Rights Reserved By
-                    <a href="https://html.design/">Free Html Templates</a>
-                </p>
-            </div>
-        </footer>
-        <!-- end  footer section -->
+								</span>
+							</button>
+						</div>
+					</div>
+
+				</nav>
+			</div>
+		</header>
+		<!-- end header section -->
+		@RenderBody()
+		<!-- footer section -->
+		<footer class="container-fluid footer_section ">
+			<div class="container">
+				<p>
+					&copy; <span id="displayDate"></span> All Rights Reserved By
+					<a href="https://html.design/">Free Html Templates</a>
+				</p>
+			</div>
+		</footer>
+		<!-- end  footer section -->
 
 
-        <script src="~/Assets/js/jquery-3.4.1.min.js"></script>
-        <script src="~/Assets/js/bootstrap.js"></script>
-        <script src="~/Assets/js/custom.js"></script>
+		<script src="~/Assets/js/jquery-3.4.1.min.js"></script>
+		<script src="~/Assets/js/bootstrap.js"></script>
+		<script src="~/Assets/js/custom.js"></script>
 
 
 </body>
